	  N_ELEMENTS now returns LONG (before ULONG)

0.8.7:    Support for GDL_PATH (falls back to IDL_PATH) environment variable.
	  Added EXPAND_PATH, ARRAY_INDICES, REBIN, LEGENDRE, IGAMMA,
	  LNGAMMA, BETA functions.
	  Added OPLOT procedure.
	  Bugfixes for ATAN (with 2 floats), CONVOL (1-dim kernel),
	  MESSAGE (prefix).

0.8.8:    Added OBJ_CLASS, OBJ_ISA, N_TAGS, SWAP_ENDIAN, BYTSCL functions.
	  Added PLOTS, XYOUTS (both 2D only), BYTEORDER procedures.
	  Improved FFT.
	  OMIN,OMAX keyword support for HISTOGRAM.
	  Fixed braced reference argument bug.
	  Changed equality checking to compatibility checking for
	  struct array definitions.
	  Added structure compatibility check for assignment to struct
	  arrays.
	  Fixed offset bug for conversion functions (BYTE, FIX, ...).
	  Fixed libfunction returning parameter bug.
	  Fixed AND, OR operator bug.
	  Fixed TVLCT bug.
	  @file now honors !PATH.
	  Changed configure.in to support python on OS X (fink)
	  Added SETENV, STRUCT_ASSIGN pro.
	  Added GETENV, STREGEX, TAG_NAMES functions.
	  Minor adjustments of default output (no FORMAT keyword).
	  Widen struct tag name rules: "!", "!$" and "!TEXT" are
	  allowed.
	  System variables can be named "!$", or "!$TEXT".
	
0.8.9:    Added SPAWN procedure.
	  Added FINITE, ROUTINE_INFO, TEMPORARY functions.	
	  Added DIST function and TVSCL procedure (as .pro files).
	  !EXCEPT system variable.
	  Changed common block compilation.	  
	  Allow RETURN as jump label (remove it from reserved words)
	  Allow library functions to return their own parameters if used
	  in a return statement.
	  Allow library functions as l-functions.
	  Fixed assignment to indexed array at one position (insert at) for
	  indices which are 0.
	  Cleaned up Compiler/Interpreter.
	  Added NAN keywords to BYTSCL, MIN, MAX.
	  Added SUBSCRIPT_MIN/MAX keywords to MAX/MIN.
	  Added NTOHL, NTOHS, HTONL, HTONS keywords to BYTEORDER.
	  Added z-buffer device
	  Fixed MOD division by zero for integers.
	